feat: enforce ownership and persistence rules